Refactor locale and country code handling
Improve locale and country code parsing and validation by using ISO standards and a comprehensive country name index.

Co-authored-by: dchipade <dchipade@gmail.com>